--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
@@ -351,7 +351,7 @@
                             Cantidad: RepuestosAprobados[i].Cantidad,
                             idError: 0,
                             Stock: Prod.Stock,
-                            idError: 0,
+                            idError: RepuestosAprobados[i].idError,
                             Opcional: RepuestosAprobados[i].Opcional
 
 
@@ -398,6 +398,11 @@
                     $('#PrecioProductoPadre').prop('readonly', true);
                 }
                 $("#PrecioProductoPadre").val(parseFloat(ProductoPadre.Precio));
+
+                if ($("#idDiag").val() != '0') {
+                    onChangeDiagnostico();
+                }
+
 
             } catch (e) {
                 Swal.fire({
@@ -2732,37 +2737,37 @@
                                         {
                                             case 1:
                                                 {
-                                                    <td> Llamada Telefónica</td>
+                                                            <td> Llamada Telefónica</td>
 
                                                     break;
                                                 }
                                             case 2:
                                                 {
-                                                    <td> Reunión</td>
+                                                            <td> Reunión</td>
 
                                                     break;
                                                 }
                                             case 3:
                                                 {
-                                                    <td> Tarea</td>
+                                                            <td> Tarea</td>
 
                                                     break;
                                                 }
                                             case 4:
                                                 {
-                                                    <td>Nota</td>
+                                                            <td>Nota</td>
 
                                                     break;
                                                 }
                                             case 5:
                                                 {
-                                                    <td> Campaña</td>
+                                                            <td> Campaña</td>
 
                                                     break;
                                                 }
                                             case 6:
                                                 {
-                                                    <td> Otros</td>
+                                                            <td> Otros</td>
 
                                                     break;
                                                 }
