--- a/Sicsoft.Checkin.Web/Pages/Usuarios/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Usuarios/Editar.cshtml
@@ -309,6 +309,12 @@
                                 <input type="text" id="CodVendedor" class="form-control form-control-lg" asp-for="Input.CardCode" required placeholder="Cod Vendedor SAP">
                             </div>
                         </div>
+                        <div class="col-md-4 pr-1">
+                            <div class="form-group">
+                                <label for="EmpleadoSAP">Codigo Empleado SAP</label>
+                                <input type="text" id="EmpleadoSAP" class="form-control form-control-lg" asp-for="Input.EmpleadoSAP" required placeholder="Cod Empleado SAP">
+                            </div>
+                        </div>
                     </div>
                      <div class="row">
                         <div class="col-md-4 pr-1">
