--- a/Sicsoft.Checkin.Web/Pages/Account/RegistroUsuario.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Account/RegistroUsuario.cshtml
@@ -253,10 +253,16 @@
 
                             </div>
                         </div>
-                        <div class="col-md-4 pl-1">
+                        <div class="col-md-4 pr-1">
                             <div class="form-group">
                                 <label for="CodVendedor">Codigo Usuario SAP</label>
                                 <input type="text" id="CodVendedor" class="form-control form-control-lg" asp-for="Input.CardCode" required placeholder="Cod Vendedor SAP">
+                            </div>
+                        </div>
+                        <div class="col-md-4 pl-1">
+                            <div class="form-group">
+                                <label for="EmpleadoSAP">Codigo Empleado SAP</label>
+                                <input type="text" id="EmpleadoSAP" class="form-control form-control-lg" asp-for="Input.EmpleadoSAP" required placeholder="Cod Empleado SAP">
                             </div>
                         </div>
                     </div>
