--- a/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
@@ -523,7 +523,7 @@
                                 <label>Estado de la Llamada:</label>
                                 <select id="statusLlamada" class="form-control" asp-for="InputLlamada.Status" required>
                                     <option value="0">Seleccione</option>
-                                    @foreach (var item in Model.Status.Where(a => a.idSAP == "-3" || a.idSAP == "47" || a.idSAP == "46" || a.idSAP == "48" || a.idSAP == "56"))
+                                    @foreach (var item in Model.Status.Where(a => a.idSAP == "7" || a.idSAP == "10" ||  a.idSAP == "56"))
                                     {
                                         <option value="@item.idSAP">@item.Nombre</option>
                                     }
