--- a/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Movimientos/Observar.cshtml
@@ -582,6 +582,19 @@
                                         </td>
 
                                     </tr>
+
+                                    if(Model.Errores.Where(a => a.id == item.idError).FirstOrDefault() != null)
+                                    {
+                                        <tr>
+                                            <td colspan="13"><b>Diagnóstico:</b> @Model.Errores.Where(a => a.id == item.idError).FirstOrDefault().Descripcion -> @Model.Errores.Where(a => a.id == item.idError).FirstOrDefault().Diagnostico</td>
+                                        </tr>
+                                    }else
+
+                                    {
+                                        <tr>
+                                            <td colspan="13"><b>Diagnóstico:</b> </td>
+                                        </tr>
+                                    }
                                     i++;
                                 }
 
